--- a/login.html
+++ b/login.html
@@ -25,7 +25,7 @@
 <body style="border-style: none;">
     <div class="container-fluid">
         <div class="row">
-            <div class="col-md-4 bg-light-blue p-0 full-height">
+            <div class="start-left-panel col-md-4 bg-light-blue p-0 full-height">
                 <div class="p-4">
                     <a href="index.html"> <img src="assets/img/logo.png"></a>
 
