--- a/signup.html
+++ b/signup.html
@@ -25,7 +25,7 @@
 <body style="border-style: none;">
     <div class="container-fluid">
         <div class="row">
-            <div class="col-md-8 bg-light-blue p-0 full-height">
+            <div class="start-left-panel col-md-8 bg-light-blue p-0 full-height">
                 <div class="p-4">
                     <a href="index.html"> <img src="assets/img/logo.png"></a>
 
@@ -42,7 +42,7 @@
                     </div>
                 </footer>
             </div>
-            <div class="col-md-4 mx-auto full-height d-flex justify-content-center align-items-center">
+            <div class="col-md-4 px-5 mx-auto full-height d-flex justify-content-center align-items-center">
                 <div class="login-area">
                     <h1 class="welcome-login-text mb-5">Register
                     </h1>
