working on pages

--- a/signup.html
+++ b/signup.html
@@ -46,7 +46,7 @@
                 <div class="login-area">
                     <h1 class="welcome-login-text mb-5">Register
                     </h1>
-                    <form action="process.html">
+                    <form action="verify.html">
                         <div class="mb-3">
 
                             <input type="email" class="form-control p-3" id="user-email" placeholder="Email/Username">
