--- a/verify.html
+++ b/verify.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, shrink-to-fit=no">
-    <title>Getting Started- Hatchio</title>
+    <title>Verify your email- Hatchio</title>
     <meta name="description" content="Free themes for students, teachers, and public use in learning purpose. Made with Bootstrap 5.">
     <link rel="icon" type="image/png" sizes="undefinedxundefined" href="assets/img/logo.png?h=3c553fe5b271aa3cbb9aa84caef3ff1c">
     <link rel="icon" type="image/png" sizes="undefinedxundefined" href="assets/img/logo.png?h=3c553fe5b271aa3cbb9aa84caef3ff1c">
@@ -22,59 +22,23 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/Swiper/3.3.1/css/swiper.min.css">
 </head>
 
-<body style="border-style: none;">
+<body style="border-style: none;" class="verify-bg">
     <div class="container-fluid">
         <div class="row">
-            <div class="col-md-4 bg-light-blue p-0 full-height">
-                <div class="p-4">
-                    <a href="index.html"> <img src="assets/img/logo.png"></a>
 
-                    <h1 class="few-click-two">A few clicks away from Career
-                    </h1>
-                </div>
-                <div class="table-bg"></div>
-
-                <footer class="footer mt-auto py-4 bg-dark-blue">
-                    <div class="container">
-                        <span class="text-muted me-5"><a href="#">Terms & Conditions</a></span>
-                        <span class="text-muted"><a href="#">Privacy Policy</a></span>
-                    </div>
-                </footer>
-            </div>
-            <div class="col-md-8 mx-auto full-height d-flex justify-content-center align-items-center">
-                <div class="login-area">
-                    <h1 class="welcome-login-text mb-5">Login
-                    </h1>
-                    <form>
+            <div class="col-md-12 mx-auto full-height d-flex justify-content-center align-items-center">
+                <div class="card p-5 border-0">
+                    <div class="card-body">
+                        <a href="index.html"> <img src="assets/img/logo.png"></a>
+                        <h1 class="mt-5">Verify your email
+                        </h1>
+                        <p class="w-75 mt-4">Hi, Creative Kaif! Use this link below to verify your email and complete your profile to enjoy Hatchio</p>
                         <div class="mb-3">
-
-                            <input type="email" class="form-control p-3" id="exampleInputEmail1" aria-describedby="emailHelp" placeholder="Email/Username">
+                            <a class="btn btn-primary primary-color w-100 p-3" href="email-verification.html" role="button">Verify Email</a>
 
                         </div>
-                        <div class="mb-3">
 
-                            <input type="password" class="form-control p-3" id="exampleInputPassword1" placeholder="Password">
-                        </div>
-
-                        <button type="submit" class="btn btn-primary primary-color w-100 p-3">Sign In</button>
-
-                    </form>
-
-                    <div class="social-login-area my-5 text-center">
-                        <div class="row">
-                            <div class="col-md-12">
-                                <div class="social-login">
-                                    <a class="btn" href="#" role="button"><img src="assets/img/svg/facebook.svg"></a>
-                                    <a class="btn" href="#" role="button"><img src="assets/img/svg/google.svg"></a>
-                                    <a class="btn" href="#" role="button"><img src="assets/img/svg/apple.svg"></a>
-
-                                </div>
-                            </div>
-                        </div>
-                    </div>
-
-                    <div class="col-md-12">
-                        <p>Dont have an account? <a href="signup.html">Sign Up</a></p>
+                        <small class="text-muted">Questions? Contact us at <a href="help@hatchio.com">help@hatchio.com</a></small>
                     </div>
                 </div>
             </div>
