--- a/complete-profile.html
+++ b/complete-profile.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, shrink-to-fit=no">
-    <title>Getting Started- Hatchio</title>
+    <title>Login- Hatchio</title>
     <meta name="description" content="Free themes for students, teachers, and public use in learning purpose. Made with Bootstrap 5.">
     <link rel="icon" type="image/png" sizes="undefinedxundefined" href="assets/img/logo.png?h=3c553fe5b271aa3cbb9aa84caef3ff1c">
     <link rel="icon" type="image/png" sizes="undefinedxundefined" href="assets/img/logo.png?h=3c553fe5b271aa3cbb9aa84caef3ff1c">
@@ -16,6 +16,7 @@
     <link rel="stylesheet" href="https://maxcdn.icons8.com/fonts/line-awesome/1.1/css/line-awesome.min.css">
     <link rel="stylesheet" href="assets/fonts/fontawesome5-overrides.min.css?h=a436bee1e5ae414f98db7ca13adfd7c0">
     <link rel="stylesheet" href="assets/css/styles.css?h=b2e4a4acc5fac1c98b67994429b0bb1b">
+    <link rel="stylesheet" href="assets/css/custom.css?h=b2e4a4acc5fac1c98b67994429b0bb1b">
     <link rel="stylesheet" href="assets/css/responsive.css?h=b2e4a4acc5fac1c98b67994429b0bb1b">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/3.5.2/animate.min.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/aos/2.3.4/aos.css">
@@ -35,14 +36,14 @@
 
                 <div class="check-timeline my-5 mx-5">
                     <div class="form-check">
-                        <input class="form-check-input check-active" type="checkbox" value="" id="flexCheckDefault" checked>
-                        <label class="form-check-label check-active" for="flexCheckDefault">
+                        <input class="form-check-input" type="checkbox" value="" id="flexCheckDefault">
+                        <label class="form-check-label" for="flexCheckDefault">
                         Get Started
                     </label>
                     </div>
 
                     <div class="">
-                        <div class="vertical-connect check-active"></div>
+                        <div class="vertical-connect"></div>
                     </div>
 
                     <div class="form-check mt-1">
@@ -110,65 +111,53 @@
 
             <div class="col-md-8 right-details-panel full-height">
 
-                <div class="dropdown">
-                    <i class="fas fa-language"></i>
-                    <a class="btn btn-white dropdown-toggle p-0" href="#" role="button" id="dropdownMenuLink" data-bs-toggle="dropdown" aria-expanded="false">
+                <div class="clearfix">
+
+                    <div class="dropdown float-start">
+                        <i class="fas fa-globe-europe"></i>
+                        <a class="btn btn-white dropdown-toggle p-0" href="#" role="button" id="dropdownMenuLink" data-bs-toggle="dropdown" aria-expanded="false">
                             English
                         </a>
 
-                    <ul class="dropdown-menu" aria-labelledby="dropdownMenuLink">
-                        <li><a class="dropdown-item" href="#">Action</a></li>
-                        <li><a class="dropdown-item" href="#">Another action</a></li>
-                        <li><a class="dropdown-item" href="#">Something else here</a></li>
-                    </ul>
+                        <ul class="dropdown-menu" aria-labelledby="dropdownMenuLink">
+                            <li><a class="dropdown-item" href="#">Action</a></li>
+                            <li><a class="dropdown-item" href="#">Another action</a></li>
+                            <li><a class="dropdown-item" href="#">Something else here</a></li>
+                        </ul>
+                    </div>
+
+                    <div class="float-end">
+                        <a href="#" class="">
+                            <h6>Creative K.</h6>
+                        </a>
+                    </div>
+
+                </div>
+
+                <div class="mt-5">
+                    <h1>Profile</h1>
+                    <p class="text-muted mt-3">Set up your Hatchio presence and hiring needs.</p>
                 </div>
 
 
-                <div class="card hi-message-card">
-                    <div class="card-body shadow-sm">
-                        <h3 class="card-title mb-4">Hi Creative Kaif,</h3>
+                <div class="edit-profile">
+                    <div class="edit-profile-picture rounded-circle bg-light">
 
-                        <p class="card-text">Thanks for your interest in Hatchio! As the one of the best talent platform, we connect millions of businesses with independent professionals like you.
-                        </p>
-                        <p class="card-text">To get started, all you need to do is fill out a profile.
-                        </p>
 
                     </div>
                 </div>
-                <form action="expertise.html">
-                    <div class="get-started-bos-start">
-                        <h1 class="mt-5 w-75 mb-5">Get Started
-                        </h1>
 
-                        <div class="card active">
-                            <div class="card-body">
-                                <div class="form-check">
-                                    <input class="form-check-input" type="radio" name="flexRadioDefault" id="flexRadioDefault1" checked>
-                                    <label class="form-check-label" for="flexRadioDefault1">
-                                  Work as a Freelancer
-                            </label>
-                                </div>
-                            </div>
-                        </div>
-                        <div class="card">
-                            <div class="card-body">
-                                <div class="form-check">
-                                    <input class="form-check-input" type="radio" name="flexRadioDefault" id="flexRadioDefault2">
-                                    <label class="form-check-label" for="flexRadioDefault2">
-                                  Hire for a project
-                            </label>
-                                </div>
-                            </div>
-                        </div>
 
-                    </div>
 
-                    <div class="mb-3">
 
-                        <button type="submit" class="btn btn-primary primary-color py-3 px-5">Continue</button>
-                    </div>
 
-                </form>
+
+                <div class="clearfix">
+
+                    <button type="submit" class="btn btn-light float-start py-3 px-5">Back</button>
+                    <button type="submit" class="btn btn-primary float-end primary-color py-3 px-5">Continue</button>
+
+                </div>
 
             </div>
 
