--- a/complete-profile.html
+++ b/complete-profile.html
@@ -140,15 +140,133 @@
                 </div>
 
 
-                <div class="edit-profile">
+                <div class="edit-profile py-5 d-flex align-items-center border-bottom">
                     <div class="edit-profile-picture rounded-circle bg-light">
+                    </div>
 
+                    <div class="profile-pic-details">
+                        <h4>Edit Profile Picture</h4>
+                        <p class="text-muted mb-4">Max.of 2mb. Recommended size: 280px 280px</p>
 
+                        <a href="#">
+                            <h6>Upload new picture</h6>
+                        </a>
                     </div>
                 </div>
 
 
 
+                <div class="edit-profile-form py-5 border-bottom">
+                    <form>
+                        <div class="mb-3">
+                            <label for="title" class="form-label text-muted"><h6>Title</h6></label>
+                            <input class="form-control" type="text" placeholder="Ex. Product Designer" aria-label="default input example">
+                        </div>
+                        <div class="mb-3">
+                            <label for="title" class="form-label text-muted"><h6>Bio</h6></label>
+                            <textarea class="form-control" id="bio" rows="3"></textarea>
+                        </div>
+                    </form>
+
+                </div>
+
+
+                <div class="hourly-rate py-5 border-bottom">
+                    <h3 class="mb-4">Hourly Rate</h3>
+                    <div class="row">
+                        <div class="col-md-4">
+                            <h6 class="text-muted">Your Hourly Rate</h6>
+                            <div class="input-group mb-3">
+                                <span class="input-group-text border-end-0 text-dark">$</span>
+                                <input type="number" class="form-control" aria-label="Amount (to the nearest dollar)">
+                                <span class="input-group-text">/hr</span>
+                            </div>
+                        </div>
+                        <div class="col-md-4">
+                            <h6 class="text-muted">Hatchio Service Fee/ 5%</h6>
+                            <div class="input-group mb-3">
+                                <span class="input-group-text border-end-0 text-dark">$</span>
+                                <input type="number" class="form-control" aria-label="Amount (to the nearest dollar)">
+                                <span class="input-group-text">/hr</span>
+                            </div>
+                        </div>
+                        <div class="col-md-4">
+                            <h6 class="">You’ll Receive</h6>
+                            <div class="input-group mb-3">
+                                <span class="input-group-text border-end-0 text-dark">$</span>
+                                <input type="number" class="form-control" aria-label="Amount (to the nearest dollar)">
+                                <span class="input-group-text">/hr</span>
+                            </div>
+                        </div>
+                    </div>
+
+                </div>
+
+
+                <div class="experience border-bottom py-5">
+                    <h3 class="mb-4">Experience</h3>
+
+                    <div class="row g-3">
+                        <div class="col-sm-6">
+                            <h6 class="text-muted">Title</h6>
+                            <input type="text" class="form-control" placeholder="Ex. Product Designer" aria-label="City">
+                        </div>
+                        <div class="col-sm-6">
+                            <h6 class="text-muted">Company</h6>
+                            <input type="text" class="form-control" placeholder="Ex. Creorb Studio" aria-label="State">
+                        </div>
+
+                        <div class="col-sm-6">
+                            <h6 class="text-muted">Years of Experience</h6>
+                            <div class="input-group">
+                                <input type="text" class="form-control" aria-label="Dollar amount (with dot and two decimal places)">
+
+                                <span class="input-group-text">0.00</span>
+                            </div>
+                        </div>
+
+                        <div class="col-sm-6">
+                            <h6 class="text-muted">Summary</h6>
+                            <input type="text" class="form-control" placeholder="Ex. Describe your Work Experience" aria-label="State">
+                        </div>
+
+                    </div>
+                    <button type="submit" class="btn btn-light-blue mt-4 py-2 px-5">Add Experience</button>
+
+                </div>
+
+
+                <div class="education py-5">
+                    <h3 class="mb-4">Education</h3>
+
+                    <div class="row g-3">
+                        <div class="col-sm-6">
+                            <h6 class="text-muted">Institution Name</h6>
+                            <input type="text" class="form-control" placeholder="Ex. Christ University" aria-label="City">
+                        </div>
+
+                        <div class="col-sm-6">
+                            <h6 class="text-muted">Years of Experience</h6>
+                            <div class="input-group">
+                                <input type="text" class="form-control" aria-label="Dollar amount (with dot and two decimal places)">
+
+                                <span class="input-group-text">0.00</span>
+                            </div>
+                        </div>
+                        <div class="col-sm-6">
+                            <h6 class="text-muted">Degree</h6>
+                            <input type="text" class="form-control" placeholder="Ex. MBA" aria-label="State">
+                        </div>
+
+
+
+                        <div class="col-sm-6">
+                            <h6 class="text-muted">Country</h6>
+                            <input type="text" class="form-control" placeholder="Ex. London" aria-label="State">
+                        </div>
+
+                    </div>
+                </div>
 
 
 
