radio switch on membership page

--- a/membership.html
+++ b/membership.html
@@ -139,7 +139,13 @@
                     <h6 class="text-muted mt-3">Designed to maximise your freelancer success and earnings! Save up to 20% on annual plans.</h6>
                     <h6 class="text-muted">Change plans anytime, conditions apply see FAQ.</h6>
                 </div>
-
+                <div class="switch-plan mt-5">
+                    <div class="form-check form-switch">
+                        <h6>Bill Yearly</h6>
+                        <input class="form-check-input" type="checkbox" id="flexSwitchCheckDefault">
+                        <h6>Bill Monthly</h6>
+                    </div>
+                </div>
 
                 <div class="my-5 membership-table">
                     <table class="table price-table">
