--- a/end-process.html
+++ b/end-process.html
@@ -135,98 +135,49 @@
                 </div>
 
                 <div class="mt-5">
-                    <h1>Membership</h1>
-                    <h6 class="text-muted mt-3">Designed to maximise your freelancer success and earnings! Save up to 20% on annual plans.</h6>
-                    <h6 class="text-muted">Change plans anytime, conditions apply see FAQ.</h6>
+                    <h1>Well Done. You all set to go</h1>
+                    <h6 class="text-muted mt-3">You’ll receive an email within 24 hours to let you know if you were accepted</h6>
+                    
                 </div>
-                <div class="switch-plan mt-5">
-                    <div class="form-check form-switch">
-                        <h6>Bill Yearly</h6>
-                        <input class="form-check-input" type="checkbox" id="flexSwitchCheckDefault">
-                        <h6>Bill Monthly</h6>
-                    </div>
-                </div>
-
-                <div class="my-5 membership-table">
-                    <table class="table price-table">
-                        <thead>
-                            <tr>
-                                <th scope="col"><img class="mb-4" src="assets/img/svg/hexagonal_logo.svg">
-                                    <h5 class="text-muted ">Hatchio Core</h5>
-                                    <h5 class="text-muted mb-3">Features</h5>
-                                </th>
-                                <th scope="col">
-                                    <h4 class="mb-3">Basic</h4>
-                                    <h6 class="text-blue">Free</h6>
-                                    <button type="button" class="btn btn-sm btn-primary primary-color my-3 px-4">Get Started</button>
-                                </th>
-
-                                <th scope="col">
-                                    <h4 class="mb-3">Plus</h4>
-                                    <h6 class="text-blue">$120/y</h6>
-                                    <button type="button" class="btn btn-sm btn-primary btn-light-blue my-3 px-4">Upgrade</button>
-                                </th>
-                                <th scope="col">
-                                    <h4 class="mb-3">Pro</h4>
-                                    <h6 class="text-blue">$300/y</h6>
-                                    <button type="button" class="btn btn-sm btn-primary btn-light-blue my-3 px-4">Upgrade</button>
-                                </th>
-                            </tr>
-                        </thead>
-                        <tbody>
-                            <tr>
-                                <th scope="row">Free Sealed Projects</th>
-                                <td><i class="fa fa-check text-blue" aria-hidden="true"></i></td>
-                                <td><i class="fa fa-check text-blue" aria-hidden="true"></i></td>
-                                <td><i class="fa fa-check text-blue" aria-hidden="true"></i></td>
-                            </tr>
-                            <tr>
-                                <th scope="row">Unlimited Project Bookmarks</th>
-                                <td><i class="fa fa-check text-blue" aria-hidden="true"></i></td>
-                                <td><i class="fa fa-check text-blue" aria-hidden="true"></i></td>
-                                <td><i class="fa fa-check text-blue" aria-hidden="true"></i></td>
-                            </tr>
-                            <tr>
-                                <th scope="row">Daily Withdrawal Requests</th>
-                                <td><i class="fa fa-check text-blue" aria-hidden="true"></i></td>
-                                <td><i class="fa fa-check text-blue" aria-hidden="true"></i></td>
-                                <td><i class="fa fa-check text-blue" aria-hidden="true"></i></td>
-                            </tr>
-                            <tr>
-                                <th scope="row">Daily Withdrawal Requests</th>
-                                <td><i class="fa fa-check text-blue" aria-hidden="true"></i></td>
-                                <td><i class="fa fa-check text-blue" aria-hidden="true"></i></td>
-                                <td><i class="fa fa-check text-blue" aria-hidden="true"></i></td>
-                            </tr>
-                            <tr>
-                                <th scope="row">Daily Withdrawal Requests</th>
-                                <td><i class="fa fa-check text-blue" aria-hidden="true"></i></td>
-                                <td><i class="fa fa-check text-blue" aria-hidden="true"></i></td>
-                                <td><i class="fa fa-check text-blue" aria-hidden="true"></i></td>
-                            </tr>
-                            <tr>
-                                <th scope="row">Daily Withdrawal Requests</th>
-                                <td><i class="fa fa-check text-blue" aria-hidden="true"></i></td>
-                                <td><i class="fa fa-check text-blue" aria-hidden="true"></i></td>
-                                <td><i class="fa fa-check text-blue" aria-hidden="true"></i></td>
-                            </tr>
-                            <tr>
-                                <th scope="row">Daily Withdrawal Requests</th>
-                                <td><i class="fa fa-check text-blue" aria-hidden="true"></i></td>
-                                <td><i class="fa fa-check text-blue" aria-hidden="true"></i></td>
-                                <td><i class="fa fa-check text-blue" aria-hidden="true"></i></td>
-                            </tr>
-
-                        </tbody>
-                    </table>
-                </div>
-
+                
+            <div class="my-5">
+              <div class="row">
+                  <div class="col-md-4 process">
+                      <!-- <img src="assets/img/svg/Frame.svg"> -->
+                   <h5 class="text-blue m-0"><i class="fa fa-snowflake-o mx-3" aria-hidden="true"></i>Go Home</h5>
+                  </div>
+                  <div class="col-md-4 process">
+                      <!-- <img src="assets/img/svg/Frame.svg"> -->
+                   <h5 class="m-0"><i class="fa fa-trophy mx-3" aria-hidden="true"></i>Browse Contests</h5>
+                  </div>
+              </div>
+              <div class="row">
+                  <div class="col-md-4 process">
+                      <!-- <img src="assets/img/svg/Frame.svg"> -->
+                   <h5 class="m-0"><i class="fa fa-briefcase mx-3" aria-hidden="true"></i>Find Jobs</h5>
+                  </div>
+                  <div class="col-md-4 process">
+                      <!-- <img src="assets/img/svg/Frame.svg"> -->
+                   <h5 class="m-0"><i class="fa fa-trophy mx-3" aria-hidden="true"></i>Check Leaderboard</h5>
+                  </div>
+              </div>
+              <div class="row">
+                  <div class="col-md-4 process">
+                      <!-- <img src="assets/img/svg/Frame.svg"> -->
+                   <h5 class="m-0"><i class="fa fa-snowflake-o mx-3" aria-hidden="true"></i>Hire Freelancers</h5>
+                  </div>
+                  <div class="col-md-4 process">
+                      <!-- <img src="assets/img/svg/Frame.svg"> -->
+                   <h5 class="m-0"><i class="fa fa-trophy mx-3" aria-hidden="true"></i>Events</h5>
+                  </div>
+              </div>
+            </div>
 
 
 
                 <div class="">
-                    <h4>You can cancel your membership at anytime with no additional charges.</h4>
-                    <h6 class="text-muted mt-3">You may refer to Hatchio Memberships article for more information.</h6>
+                    <h4>Join Community.</h4>
+                    <h6><span class="text-muted mt-3">You may refer to Hatchio article for more information on</span> <a href="#">Blog</a>. </h6>
                 </div>
 
 
