--- a/end-process.html
+++ b/end-process.html
@@ -144,7 +144,7 @@
               <div class="row">
                   <div class="col-md-4 process">
                       <!-- <img src="assets/img/svg/Frame.svg"> -->
-                   <h5 class="text-blue m-0"><i class="fa fa-snowflake-o mx-3" aria-hidden="true"></i>Go Home</h5>
+                   <h5 class="text-blue m-0"><i class="fas fa-asterisk mx-3"></i>Go Home</h5>
                   </div>
                   <div class="col-md-4 process">
                       <!-- <img src="assets/img/svg/Frame.svg"> -->
@@ -158,26 +158,30 @@
                   </div>
                   <div class="col-md-4 process">
                       <!-- <img src="assets/img/svg/Frame.svg"> -->
-                   <h5 class="m-0"><i class="fa fa-trophy mx-3" aria-hidden="true"></i>Check Leaderboard</h5>
+                   <h5 class="m-0"><i class="fas fa-crown mx-3"></i>Check Leaderboard</h5>
                   </div>
               </div>
               <div class="row">
                   <div class="col-md-4 process">
                       <!-- <img src="assets/img/svg/Frame.svg"> -->
-                   <h5 class="m-0"><i class="fa fa-snowflake-o mx-3" aria-hidden="true"></i>Hire Freelancers</h5>
+                   <h5 class="m-0"><i class="fas fa-user mx-3"></i>Hire Freelancers</h5>
                   </div>
                   <div class="col-md-4 process">
                       <!-- <img src="assets/img/svg/Frame.svg"> -->
-                   <h5 class="m-0"><i class="fa fa-trophy mx-3" aria-hidden="true"></i>Events</h5>
+                   <h5 class="m-0"><i class="fas fa-calendar-day mx-3"></i>Events</h5>
                   </div>
               </div>
             </div>
 
 
 
-                <div class="">
-                    <h4>Join Community.</h4>
-                    <h6><span class="text-muted mt-3">You may refer to Hatchio article for more information on</span> <a href="#">Blog</a>. </h6>
+                <div class="community-social">
+                    <h4 class="mb-3">Join Community.</h4>
+                    <h6 class="mb-4"><span class="text-muted">You may refer to Hatchio article for more information on</span> <a href="#">Blog.</a></h6>
+                    <a href="#"><img src="assets/img/svg/facebook-o.svg" alt=""></a>
+                    <a href="#"><img src="assets/img/svg/twitter-o.svg" alt=""></a>
+                    <a href="#"><img src="assets/img/svg/in-o.svg" alt=""></a>
+                    <a href="#"><img src="assets/img/svg/youtube-o.svg" alt=""></a>
                 </div>
 
 
