--- a/end-process.html
+++ b/end-process.html
@@ -16,6 +16,7 @@
     <link rel="stylesheet" href="https://maxcdn.icons8.com/fonts/line-awesome/1.1/css/line-awesome.min.css">
     <link rel="stylesheet" href="assets/fonts/fontawesome5-overrides.min.css?h=a436bee1e5ae414f98db7ca13adfd7c0">
     <link rel="stylesheet" href="assets/css/styles.css?h=b2e4a4acc5fac1c98b67994429b0bb1b">
+    <link rel="stylesheet" href="assets/css/typeface.css?h=b2e4a4acc5fac1c98b67994429b0bb1b">
     <link rel="stylesheet" href="assets/css/custom.css?h=b2e4a4acc5fac1c98b67994429b0bb1b">
     <link rel="stylesheet" href="assets/css/responsive.css?h=b2e4a4acc5fac1c98b67994429b0bb1b">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/3.5.2/animate.min.css">
@@ -137,41 +138,41 @@
                 <div class="mt-5">
                     <h1>Well Done. You all set to go</h1>
                     <h6 class="text-muted mt-3">You’ll receive an email within 24 hours to let you know if you were accepted</h6>
-                    
+
                 </div>
-                
-            <div class="my-5">
-              <div class="row">
-                  <div class="col-md-4 process">
-                      <!-- <img src="assets/img/svg/Frame.svg"> -->
-                   <h5 class="text-blue m-0"><i class="fas fa-asterisk mx-3"></i>Go Home</h5>
-                  </div>
-                  <div class="col-md-4 process">
-                      <!-- <img src="assets/img/svg/Frame.svg"> -->
-                   <h5 class="m-0"><i class="fa fa-trophy mx-3" aria-hidden="true"></i>Browse Contests</h5>
-                  </div>
-              </div>
-              <div class="row">
-                  <div class="col-md-4 process">
-                      <!-- <img src="assets/img/svg/Frame.svg"> -->
-                   <h5 class="m-0"><i class="fa fa-briefcase mx-3" aria-hidden="true"></i>Find Jobs</h5>
-                  </div>
-                  <div class="col-md-4 process">
-                      <!-- <img src="assets/img/svg/Frame.svg"> -->
-                   <h5 class="m-0"><i class="fas fa-crown mx-3"></i>Check Leaderboard</h5>
-                  </div>
-              </div>
-              <div class="row">
-                  <div class="col-md-4 process">
-                      <!-- <img src="assets/img/svg/Frame.svg"> -->
-                   <h5 class="m-0"><i class="fas fa-user mx-3"></i>Hire Freelancers</h5>
-                  </div>
-                  <div class="col-md-4 process">
-                      <!-- <img src="assets/img/svg/Frame.svg"> -->
-                   <h5 class="m-0"><i class="fas fa-calendar-day mx-3"></i>Events</h5>
-                  </div>
-              </div>
-            </div>
+
+                <div class="my-5">
+                    <div class="row">
+                        <div class="col-md-4 process">
+                            <!-- <img src="assets/img/svg/Frame.svg"> -->
+                            <h5 class="text-blue m-0"><i class="fas fa-asterisk mx-3"></i>Go Home</h5>
+                        </div>
+                        <div class="col-md-4 process">
+                            <!-- <img src="assets/img/svg/Frame.svg"> -->
+                            <h5 class="m-0"><i class="fa fa-trophy mx-3" aria-hidden="true"></i>Browse Contests</h5>
+                        </div>
+                    </div>
+                    <div class="row">
+                        <div class="col-md-4 process">
+                            <!-- <img src="assets/img/svg/Frame.svg"> -->
+                            <h5 class="m-0"><i class="fa fa-briefcase mx-3" aria-hidden="true"></i>Find Jobs</h5>
+                        </div>
+                        <div class="col-md-4 process">
+                            <!-- <img src="assets/img/svg/Frame.svg"> -->
+                            <h5 class="m-0"><i class="fas fa-crown mx-3"></i>Check Leaderboard</h5>
+                        </div>
+                    </div>
+                    <div class="row">
+                        <div class="col-md-4 process">
+                            <!-- <img src="assets/img/svg/Frame.svg"> -->
+                            <h5 class="m-0"><i class="fas fa-user mx-3"></i>Hire Freelancers</h5>
+                        </div>
+                        <div class="col-md-4 process">
+                            <!-- <img src="assets/img/svg/Frame.svg"> -->
+                            <h5 class="m-0"><i class="fas fa-calendar-day mx-3"></i>Events</h5>
+                        </div>
+                    </div>
+                </div>
 
 
 
