--- a/news-feed.html
+++ b/news-feed.html
@@ -42,17 +42,7 @@
                     <li class="nav-item">
                         <a class="nav-link" href="#"><i class="fas fa-trophy"></i>Contests</a>
                     </li>
-                    <!-- <li class="nav-item dropdown">
-                <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false">
-                  Dropdown
-                </a>
-                <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
-                  <li><a class="dropdown-item" href="#">Action</a></li>
-                  <li><a class="dropdown-item" href="#">Another action</a></li>
-                  <li><hr class="dropdown-divider"></li>
-                  <li><a class="dropdown-item" href="#">Something else here</a></li>
-                </ul>
-              </li> -->
+
                     <li class="nav-item">
                         <a class="nav-link" href="#" tabindex="-1" aria-disabled="true"><i class="fas fa-briefcase"></i>Jobs</a>
                     </li>
@@ -61,7 +51,7 @@
                     <a class="text-white mx-3" href=""><i class="fas fa-crown"></i></a>
                     <a class="text-white mx-3" href=""><i class="fas fa-search"></i></a>
                     <a class="text-white mx-3 position-relative" href=""><i class="fas fa-comment"></i>
-                        <span class="position-absolute top-0 start-100 translate-middle badge border border-light rounded-circle bg-danger p-1"><span class="visually-hidden">unread messages</span></span>
+                        <span class="position-absolute top-0 start-100 translate-middle badge border border-primary rounded-circle bg-primary p-1"><span class="visually-hidden">unread messages</span></span>
                     </a>
                     <a class="text-white mx-3" href=""><i class="fas fa-bell"></i></a>
 
