Working on browse-contest

--- a/browse-contest.html
+++ b/browse-contest.html
@@ -191,10 +191,20 @@
 
 
 
-                                <div class="col-md-3">
+                                <div class="col-md-2 ms-auto">
                                     <h4 class="d-inline">$10000</h4><small class="text-muted mx-1">/USD</small>
                                     <p class="text-muted mt-3"><i class="far fa-clock me-2"></i>17 Hours Left</p>
                                     <p><i class="far fa-star text-muted me-2"></i>0% Rated</p>
+
+                                    <div class="mt-cust">
+                                        <button type="button" class="btn btn-light-cust me-3"><i class="far fa-bookmark"></i></button>
+                                        <button type="button" class="btn btn-light-cust"><i class="far fa-check-square"></i></button>
+
+                                    </div>
+
+                                    <div class="vertical-line-gray">
+
+                                    </div>
                                 </div>
                             </div>
 
