--- a/user-portfolio.html
+++ b/user-portfolio.html
@@ -105,10 +105,10 @@
                                     <div class="col-md-8 d-flex align-items-start flex-column">
                                         <div class="">
                                         <div class="d-flex align-items-center">
-                                            <h1 class="me-3">Creative Kaif</h1>
+                                            <h2 class="me-3">Creative Kaif</h2>
                                             <img src="assets/img/svg/preferred.svg" alt="">
                                         </div>
-                                        <h3 class="text-muted">Brand & Product Design</h3>
+                                        <h5 class="text-muted">Brand & Product Design</h5>
                                     </div>
 
                                     <div class="d-flex my-5">
@@ -132,10 +132,10 @@
 
                             <div class="p-4 border-end clearfix">
                                 <div class="d-flex float-start">
-                               <a href="#" class="mb-0 me-4">About</a> 
+                               <a href="user-profile.html" class="mb-0 me-4">About</a> 
                                <a href="user-portfolio.html" class="mb-0 me-4 active" aria-current="page">Portfolio</a> 
-                               <a href="#" class="mb-0 me-4">Reviews</a> 
-                               <a href="#" class="mb-0">Analysis</a> 
+                               <a href="user-review.html" class="mb-0 me-4">Reviews</a> 
+                               <a href="user-analysis.html" class="mb-0">Analysis</a> 
                             </div>
 
                             <div class="float-end">
