--- a/user-profile.html
+++ b/user-profile.html
@@ -131,7 +131,7 @@
                    <a href="user-profile.html" class="mb-0 me-4">About</a> 
                    <a href="user-portfolio.html" class="mb-0 me-4 active" aria-current="page">Portfolio</a> 
                    <a href="user-review.html" class="mb-0 me-4">Reviews</a> 
-                   <a href="user-analysis.html" class="mb-0">Analysis</a> 
+                   <!-- <a href="user-analysis.html" class="mb-0">Analysis</a>  -->
                 </div>
 
                 <div class="float-end">
