--- a/complete-portfolio.html
+++ b/complete-portfolio.html
@@ -162,7 +162,7 @@
                     <form>
                         <div class="mb-3">
                             <label for="url" class="form-label text-muted"><h6>Website URL</h6></label>
-                            <input class="form-control" type="text" placeholder="http://creorb.com" aria-label="default input example">
+                            <input class="form-control" type="url" placeholder="http://creorb.com" aria-label="default input example">
                         </div>
 
                     </form>
@@ -255,6 +255,10 @@
                             <h6 class="text-muted">Preview</h6>
                             <div class="upload-image-preview"></div>
                             <form action="">
+                                <div class="mt-4">
+                                    <h6 class="text-muted">Title</h6>
+                                    <input class="form-control py-3" type="text" placeholder="Title of your design" aria-label="default input example">
+                                </div>
                                 <div class="my-4 ">
                                     <h6 class="text-muted">Description</h6>
                                     <textarea class="form-control" id="exampleFormControlTextarea1" placeholder="Ex. Discribe about this project .." rows="3"></textarea>
