--- a/create-project-details.html
+++ b/create-project-details.html
@@ -22,6 +22,10 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/3.5.2/animate.min.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/aos/2.3.4/aos.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/Swiper/3.3.1/css/swiper.min.css">
+    <link href="https://cdnjs.cloudflare.com/ajax/libs/summernote/0.8.9/summernote-bs4.css" rel="stylesheet">
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/modernizr/2.8.3/modernizr.min.js" type="text/javascript"></script>
+
+
 </head>
 
 <body style="border-style: none;">
@@ -100,10 +104,54 @@
                 </div>
 
                 <div class="col-md-3 search-contest">
-                    <p class="text-white">Post a prize and get competing entries which you can iterate on with feedback. Great for visual designs. </p>
+                    <p class="text-white ">Post a prize and get competing entries which you can iterate on with feedback. Great for visual designs. </p>
                 </div>
                 <div class="col-md-9">
+                    <div class="profile-top-sec shadow-cust p-4">
+                        <h3>Contest Title</h3>
+                        <hr class="my-4">
+                        <form action="">
+                            <h6 class="text-muted">Choose a name for your contest*</h6>
+                            <input class="form-control py-3" type="text" placeholder="Title of your contest" aria-label="default input example">
+                        </form>
+                    </div>
 
+                    <div class="profile-top-sec shadow-cust mt-4 p-4">
+                        <h3>Project Brief</h3>
+                        <hr class="my-4">
+                        <form action="">
+                            <h6 class="text-muted">Project Description*</h6>
+                            <!-- <textarea id="summernote"></textarea> -->
+                        </form>
+                    </div>
+
+
+                    <div class="profile-top-sec shadow-cust mt-4 p-4">
+                        <h3>Skills Required</h3>
+                        <hr class="my-4">
+                        <form action="">
+
+
+                            <div class="mt-2 main-services">
+                                <h6 class="text-muted">Main Services*</h6>
+
+
+                                <button type="button" class="btn btn-primary" data-bs-toggle="button" autocomplete="off">Design & Creative</button>
+                                <button type="button" class="btn btn-primary" data-bs-toggle="button" autocomplete="off" aria-pressed="true">Programming & Tech</button>
+                                <button type="button" class="btn btn-primary" data-bs-toggle="button" autocomplete="off" aria-pressed="true">Writing & Translation</button>
+                                <button type="button" class="btn btn-primary" data-bs-toggle="button" autocomplete="off" aria-pressed="true">3D & Animation</button>
+                                <button type="button" class="btn btn-primary" data-bs-toggle="button" autocomplete="off" aria-pressed="true">Music & Video</button>
+                                <button type="button" class="btn btn-primary" data-bs-toggle="button" autocomplete="off" aria-pressed="true">Sales & Marketing</button>
+                                <button type="button" class="btn btn-primary" data-bs-toggle="button" autocomplete="off" aria-pressed="true">Lifestyle & Photography</button>
+
+                            </div>
+
+                            <hr class="my-4">
+
+                            <h6 class="text-muted">Add Total 5 Required Skills minimum 3.</h6>
+                            <input id="ms1" style="width:400px;" type="text" name="ms1" />
+                        </form>
+                    </div>
 
 
                 </div>
@@ -124,21 +172,49 @@
 
 
 
-
+    <script src="https://code.jquery.com/jquery-3.6.0.min.js" integrity="sha256-/xUj+3OJU5yExlq6GSYGSHk7tPXikynS7ogEvDej/m4=" crossorigin="anonymous"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/5.0.0-beta3/js/bootstrap.bundle.min.js "></script>
     <script src="assets/js/smart-forms.min.js?h=a436bee1e5ae414f98db7ca13adfd7c0 "></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/aos/2.3.4/aos.js "></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/Swiper/3.3.1/js/swiper.jquery.min.js "></script>
     <script src="assets/js/script.min.js?h=107149a5a76976f881b165a9c43ae6c5 "></script>
+    <script src="assets/js/tag-input.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css "></script>
-    <script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/summernote/0.8.9/summernote-bs4.js"></script>
+
+
+
+    <!-- <script>
         var tooltipTriggerList = [].slice.call(
             document.querySelectorAll('[data-toggle="tooltip "]')
         );
         var tooltipList = tooltipTriggerList.map(function(tooltipTriggerEl) {
             return new bootstrap.Tooltip(tooltipTriggerEl);
         });
+    </script> -->
+
+    <script>
+        $('textarea#summernote').summernote({
+            placeholder: 'Hello bootstrap 4',
+            tabsize: 2,
+            height: 100,
+            toolbar: [
+                ['style', ['style']],
+                ['font', ['bold', 'italic', 'underline', 'clear']],
+                // ['font', ['bold', 'italic', 'underline', 'strikethrough', 'superscript', 'subscript', 'clear']],
+                //['fontname', ['fontname']],
+                // ['fontsize', ['fontsize']],
+                ['color', ['color']],
+                ['para', ['ul', 'ol', 'paragraph']],
+                ['height', ['height']],
+                ['table', ['table']],
+                ['insert', ['link', 'picture', 'hr']],
+                //['view', ['fullscreen', 'codeview']],
+                ['help', ['help']]
+            ],
+        });
     </script>
+
 </body>
 
 </html>
